Fixed memory leaks (related to bug #52361)